--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
         </div>
         <div class="mywork-wrap">
           <div class="mywork-list">
-            <div class="mywork-img"><a href="#"><img src="photo/スクリーンショット 2021-12-19 21.40.26.png" alt="" class=""></a></div>
+            <div class="mywork-img"><a href="#"><img src="https://github.com/Ren6628/Ren-page/blob/main/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202021-12-19%2021.40.26.png?raw=true" alt="" class=""></a></div>
             <div class="mywork-text"><p>Progate</p></div>
           </div>
           <div class="mywork-list">
-            <div class="mywork-img"><a href=""><img src="photo/my site.png" alt="#" class=""></a></div>
+            <div class="mywork-img"><a href=""><img src="https://github.com/Ren6628/Ren-page/blob/main/my%20site.png?raw=true" alt="#" class=""></a></div>
             <div class="mywork-text"><p>My site</p></div>
           </div>
           <div class="mywork-list">
