--- a/index.html
+++ b/index.html
@@ -4,32 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Ren Page</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/wow.min.js"></script>
 </head>
 <body>
   <header class="header">
-    <div class="header-fixed">
       <div class="header-left">
         <p class="header-logo">Ren page</p>
       </div>
       <div class="header-right">
-          <div class="nav header-nav" id="nav">
-            <nav class="nav-wrap">
-                <ul class="nav-list">
-                    <li class="item"><a href="#">home</a></li>
-                    <li class="item"><a href="#">output</a></li>
-                    <li class="item"><a href="#">my work</a></li>
-                    <li class="item"><a href="#">form</a></li>
-                    <li class="item"><a href="#">twitter</a></li>
-                    <li class="item"><a href="https://instagram.com/ren18471?utm_medium=copy_link">instagram</a></li></li>
-                </ul>
-            </nav>
-        </div>
-      </div>
+        <nav class="nav-wrap">
+          <ul class="nav-list">
+            <li class="item"><a href="#">home</a></li>
+              <li class="item"><a href="#">output</a></li>
+              <li class="item"><a href="#">my work</a></li>
+              <li class="item"><a href="#">form</a></li>
+              <li class="item"><a href="#">twitter</a></li>
+              <li class="item"><a href="https://instagram.com/ren18471?utm_medium=copy_link">instagram</a></li></li>
+        </ul>
+      </nav>
     </div>
-    <button class="burger-btn">
-      <!-- ③ハンバーガーボタン -->
+    <button class="burger-btn"><!-- ③ハンバーガーボタン -->
       <span class="bar bar_top"></span>
       <span class="bar bar_mid"></span>
       <span class="bar bar_bottom"></span>
@@ -54,7 +53,7 @@
           </div>
           <div class="one-comment">
             <div class="one-comment-title">ひとこと</div>
-            <p class="one-comment-p">琉球大学農学部に所属しています。<br>趣味はサーフィンとギターです。<br>最近は、キャンプも始めました。アウトドア好きです。<br>ぜひ機会があれば一緒にいきましょう</p>
+            <p class="one-comment-p">琉球大学農学部に所属しています。<br class="smart">趣味はサーフィンとギターです。<br class="smart">最近は、キャンプも始めました。アウトドア好きです。<br class="smart">ぜひ機会があれば一緒にいきましょう</p>
           </div>
         </div>
       </div>
@@ -63,21 +62,21 @@
       <div class="output-cont">
         <div class="output-wrap">
           <div class="output-list">
-            <div class="output-img"><img src="https://github.com/Ren6628/Ren-page/blob/main/IMG_0958.jpeg?raw=true" alt=""></div>
+            <div class="output-img"><img src="photo/IMG_0958.jpeg" alt=""></div>
             <div class="output-text">
               <div class="output-text-title">サーフィン</div>
                 <p class="output-text-comment">週に数回サーフィンをしています。サーフィンは自分と自然が一体になっている感覚になるためすごく気持ちよくいいスポーツです。</p>
               </div>
           </div>
           <div class="output-list">
-            <div class="output-img"><img src="https://github.com/Ren6628/Ren-page/blob/main/IMG_3817.jpeg?raw=true" alt=""></div>
+            <div class="output-img"><img src="photo/IMG_3817.jpeg" alt=""></div>
             <div class="output-text">
               <div class="output-text-title">ギター</div>
               <p class="output-text-comment">小学校6年生からギターを始めました。今は友人と弾いたりして楽しんでいます。</p>
             </div>
           </div>
           <div class="output-list">
-            <div class="output-img"><img src="https://github.com/Ren6628/Ren-page/blob/main/GPTempDownload.jpeg?raw=true"  alt="3"></div>
+            <div class="output-img"><img src="photo/GPTempDownload.jpeg"  alt="3"></div>
             <div class="output-text">
               <div class="output-text-title">キャンプ</div>
               <p class="output-text-comment">最近、キャンプにもはまっています。自然と触れ合うことで、気分がリフッレッシュします。</p>
@@ -95,11 +94,11 @@
         </div>
         <div class="mywork-wrap">
           <div class="mywork-list">
-            <div class="mywork-img"><a href="#"><img src="https://github.com/Ren6628/Ren-page/blob/main/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202021-12-19%2021.40.26.png?raw=true" alt="" class=""></a></div>
+            <div class="mywork-img"><a href="#"><img src="photo/スクリーンショット 2021-12-19 21.40.26.png" alt="" class=""></a></div>
             <div class="mywork-text"><p>Progate</p></div>
           </div>
           <div class="mywork-list">
-            <div class="mywork-img"><a href="#"><img src="https://github.com/Ren6628/Ren-page/blob/main/my%20site.png?raw=true" alt="#" class=""></a></div>
+            <div class="mywork-img"><a href=""><img src="photo/my site.png" alt="#" class=""></a></div>
             <div class="mywork-text"><p>My site</p></div>
           </div>
           <div class="mywork-list">
@@ -124,7 +123,7 @@
           <p>/</p>
           <a href="https://instagram.com/ren18471?utm_medium=copy_link"><p>instagram</p></a>
         </div>
-        <div class="footer-comment"><p>http://127.0.0.1:5500/index.html</p></div>
+        <div class="footer-comment"><p>file:///Users/kodamarentarou/<br class="sp">Library/Mobile%20Documents/index.html</p></div>
       </div>
     </footer>
   </main>
