--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
       <div class="output-cont">
         <div class="output-wrap">
           <div class="output-list">
-            <div class="output-img"><img src="photo/IMG_0958.jpeg" alt=""></div>
+            <div class="output-img"><img src="https://github.com/Ren6628/Ren-page/blob/main/IMG_0958.jpeg?raw=true" alt=""></div>
             <div class="output-text">
               <div class="output-text-title">サーフィン</div>
                 <p class="output-text-comment">週に数回サーフィンをしています。サーフィンは自分と自然が一体になっている感覚になるためすごく気持ちよくいいスポーツです。</p>
               </div>
           </div>
           <div class="output-list">
-            <div class="output-img"><img src="photo/IMG_3817.jpeg" alt=""></div>
+            <div class="output-img"><img src="https://github.com/Ren6628/Ren-page/blob/main/IMG_3817.jpeg?raw=true" alt=""></div>
             <div class="output-text">
               <div class="output-text-title">ギター</div>
               <p class="output-text-comment">小学校6年生からギターを始めました。今は友人と弾いたりして楽しんでいます。</p>
             </div>
           </div>
           <div class="output-list">
-            <div class="output-img"><img src="photo/GPTempDownload.jpeg"  alt="3"></div>
+            <div class="output-img"><img src="https://github.com/Ren6628/Ren-page/blob/main/GPTempDownload.jpeg?raw=true"  alt="3"></div>
             <div class="output-text">
               <div class="output-text-title">キャンプ</div>
               <p class="output-text-comment">最近、キャンプにもはまっています。自然と触れ合うことで、気分がリフッレッシュします。</p>
@@ -94,11 +94,11 @@
         </div>
         <div class="mywork-wrap">
           <div class="mywork-list">
-            <div class="mywork-img"><a href="#"><img src="photo/スクリーンショット 2021-12-19 21.40.26.png" alt="" class=""></a></div>
+            <div class="mywork-img"><a href="#"><img src="https://github.com/Ren6628/Ren-page/blob/main/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202021-12-19%2021.40.26.png?raw=true" alt="" class=""></a></div>
             <div class="mywork-text"><p>Progate</p></div>
           </div>
           <div class="mywork-list">
-            <div class="mywork-img"><a href=""><img src="photo/my site.png" alt="#" class=""></a></div>
+            <div class="mywork-img"><a href=""><img src="https://github.com/Ren6628/Ren-page/blob/main/my%20site.png?raw=true" alt="#" class=""></a></div>
             <div class="mywork-text"><p>My site</p></div>
           </div>
           <div class="mywork-list">
