--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="mywork-title"><p>My work</p></div>
         <div class="mywork-cont">
         <div class="mywork-porcy">
-          <p>私は、HTML&CSS、Javascript、JQuery、Rubyを学び、使うことができます。お仕事をさせていただくことがあれば、期限を守り、丁寧な仕事をします。
+          <p>私は、HTML&CSS、Javascript、JQuery、Wordpressを学び、使うことができます。お仕事をさせていただくことがあれば、期限を守り、丁寧な仕事をします。
           </p>
         </div>
         <div class="mywork-wrap">
@@ -103,7 +103,7 @@
           </div>
           <div class="mywork-list">
             <div class="mywork-img"><img src="" alt="" class=""></div>
-            <div class="mywork-text"><p>Ruby</p></div>
+            <div class="mywork-text"><p>Wordpress</p></div>
           </div>
         </div>
       </div>
