--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
         <nav class="nav-wrap">
           <ul class="nav-list">
             <li class="item"><a href="#">home</a></li>
-              <li class="item"><a href="#">output</a></li>
-              <li class="item"><a href="#">my work</a></li>
-              <li class="item"><a href="#">form</a></li>
-              <li class="item"><a href="#">twitter</a></li>
+              <li class="item"><a href="https://twitter.com/XzegEsjs">twitter</a></li>
               <li class="item"><a href="https://instagram.com/ren18471?utm_medium=copy_link">instagram</a></li></li>
         </ul>
       </nav>
@@ -102,7 +99,7 @@
             <div class="mywork-text"><p>My site</p></div>
           </div>
           <div class="mywork-list">
-            <div class="mywork-img"><img src="" alt="" class=""></div>
+            <div class="mywork-img"><img src="3F2C78EB-BC07-4D17-A8D2-071677A4A59C_1_105_c.jpeg " alt="" class=""></div>
             <div class="mywork-text"><p>Wordpress</p></div>
           </div>
         </div>
@@ -113,13 +110,7 @@
         <div class="footer-text">
           <a href="#"><p>home</p></a>
           <p>/</p>
-          <a href="#"><p>output</p></a>
-          <p>/</p>
-          <a href="#"><p>my work</p></a>
-          <p>/</p>
-          <a href="#"><p>form</p></a>
-          <p>/</p>
-          <a href="#"><p>twitter</p></a>
+          <a href="https://twitter.com/XzegEsjs"><p>twitter</p></a>
           <p>/</p>
           <a href="https://instagram.com/ren18471?utm_medium=copy_link"><p>instagram</p></a>
         </div>
