--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="mywork-title"><p>My work</p></div>
         <div class="mywork-cont">
         <div class="mywork-porcy">
-          <p>私は、HTML&CSS、Javascript、JQuery、Wordpressを学び、使うことができます。お仕事をさせていただくことがあれば、期限を守り、丁寧な仕事をします。
+          <p>私は現在web制作を中心に活動しております。お仕事をさせていただくことがあれば、期限を守り、丁寧な仕事をします。
           </p>
         </div>
         <div class="mywork-wrap">
@@ -100,7 +100,7 @@
           </div>
           <div class="mywork-list">
             <div class="mywork-img"><img src="3F2C78EB-BC07-4D17-A8D2-071677A4A59C_1_105_c.jpeg " alt="" class=""></div>
-            <div class="mywork-text"><p>Wordpress</p></div>
+            <div class="mywork-text"><p>デモサイト</p></div>
           </div>
         </div>
       </div>
