--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <div class="mywork-text"><p>My site</p></div>
           </div>
           <div class="mywork-list">
-            <div class="mywork-img"><img src="3F2C78EB-BC07-4D17-A8D2-071677A4A59C_1_105_c.jpeg " alt="" class=""></div>
-            <div class="mywork-text"><p>デモサイト</p></div>
+            <div class="mywork-img"><a href="https://chinese-kichen-sai.com/"><img src="" alt="#" class=""></a></div>
+            <div class="mywork-text"><p>Chinese Kichen 彩</p></div>
           </div>
         </div>
       </div>
