--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="mywork-text"><p>My site</p></div>
           </div>
           <div class="mywork-list">
-            <div class="mywork-img"><a href="https://chinese-kichen-sai.com/"><img src="" alt="#" class=""></a></div>
+            <div class="mywork-img"><a href="https://chinese-kichen-sai.com/"><img src="スクリーンショット 2022-02-28 14.02.32.png" alt="#" class=""></a></div>
             <div class="mywork-text"><p>Chinese Kichen 彩</p></div>
           </div>
         </div>
