--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="mywork-text"><p>My site</p></div>
           </div>
           <div class="mywork-list">
-            <div class="mywork-img"><a href="https://chinese-kichen-sai.com/"><img src="スクリーンショット 2022-02-28 14.02.32.png" alt="#" class=""></a></div>
+            <div class="mywork-img"><a href="https://chinese-kichen-sai.com/"><img src="https://github.com/Ren6628/Ren-page/blob/main/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202022-02-28%2014.02.32.png?raw=true" alt="#" class=""></a></div>
             <div class="mywork-text"><p>Chinese Kichen 彩</p></div>
           </div>
         </div>
